[ServiceBus] Fix NPE in instrumentProcess (#35660)
* fix npe in instrumentProcess