@@ -43,10 +43,8 @@
       --add-opens com.azure.messaging.servicebus/com.azure.messaging.servicebus.administration.models=ALL-UNNAMED
 
       --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
-      --add-exports com.azure.core/com.azure.core.implementation.instrumentation=ALL-UNNAMED
       --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
       --add-reads com.azure.messaging.servicebus=com.azure.http.netty
-      --add-reads com.azure.messaging.servicebus=com.azure.core.tracing.opentelemetry
       --add-reads com.azure.messaging.servicebus=com.azure.core.experimental
     </javaModulesSurefireArgLine>
   </properties>
